Port remaining usage of Kotlin in generator and samples to Java (#225)
* Port remaining usage of Kotlin in generator and samples to Java

* Bump version to 1.9.9